--- a/src/components/aichat.css
+++ b/src/components/aichat.css
@@ -5,9 +5,20 @@
     line-gap-override: 10px;
 }
 
+.copy {
+  position: absolute;
+  right: 0;
+  margin-right: 20px;
+  background-color: #2c2c2c;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
 /* markdown.css */
 
 .markdown-body {
+  position: relative;
   line-height: 1.7;
   font-size: 1rem;
 }
