--- a/src/app/page.css
+++ b/src/app/page.css
@@ -3,6 +3,15 @@
     width: 10px;
 }
 
+.logo {
+    color: #f3f3f3;
+    margin-top: 20px;
+    margin-left: 20px;
+    font-weight: 500;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 23;
+    letter-spacing: -1px;
+}
 
 .chats::-webkit-scrollbar-thumb {
     background-color: #424242;
