--- a/src/components/aichat.css
+++ b/src/components/aichat.css
@@ -22,6 +22,7 @@
   position: relative;
   line-height: 1.7;
   font-size: 1rem;
+  margin-bottom: 50px;
 }
 
 /* Paragraphs */
@@ -63,4 +64,25 @@
 
 .markdown-body a {
     color: rgb(184, 184, 255);
+}
+
+.sources span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(255, 255, 255, 0.573);
+  width: fit-content;
+  border-radius: 100px;
+  padding: 5px 0;
+}
+
+.sources p {
+  margin-right: 10px;
+  color: rgba(255, 255, 255, 0.795);
+  margin: auto 10px;
+}
+
+.source-icon {
+  border-radius: 100px;
+  border: 2px solid #212121;
 }
