--- a/src/components/prompt_view.css
+++ b/src/components/prompt_view.css
@@ -24,7 +24,7 @@
     align-items: center;
     resize: none;
     font-family: 'Roboto';
-    padding-top: 20px;
+    padding-top: 15px;
     margin-right: 20px;
 }
 
@@ -72,4 +72,25 @@
 
 .promptsub label {
     display: flex;
+}
+
+.web-search-btn {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    padding: 7px;
+    outline: none;
+    border: 1px solid rgba(255, 255, 255, 0.365);
+    background-color: transparent;
+    color: white;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    gap: 5;
+    cursor: pointer;
+}
+
+.web-search-btn p{
+    padding-top: 1px;
 }
