--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,3 +1,7 @@
+.main-page {
+    position: relative;
+}
+
 .chats::-webkit-scrollbar {
     background-color: transparent;
     width: 10px;
@@ -5,8 +9,8 @@
 
 .logo {
     color: #f3f3f3;
-    margin-top: 20px;
     margin-left: 20px;
+    padding-top: 20px;
     font-weight: 500;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 23;
